# computational-finance-pipeline

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DATA_CARD.md  LICENSE  MODEL_CARD.md  README.md  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
configs/: default.yaml  fetch_smoke.yaml  sample.yaml
docs/: architecture.md  resume.md  stage_io_contract.md
examples/sample_data/processed/: daily_price_50.csv
legacy/: README.md  proj2.py  proj3.py  proj4.py  proj5.py
reports/: BASELINE_SUMMARY.md  FIGURES.md  admissions_packet.md  application_materials.md  executive_summary.md  related_work.md  research_report.md
scripts/: create_sample_data.py  run_all.ps1
src/cfpipeline/: __init__.py  acquire.py  artifacts.py  backtest.py  benchmarks.py  cleaning.py  cli.py  config.py  decision.py  factors.py  ml.py  paths.py  research.py  stress.py  tuning.py  validation.py
tests/: conftest.py  test_acquire.py  test_artifacts.py  test_backtest.py  test_cleaning.py  test_config.py  test_decision.py  test_factors.py  test_integration.py  test_ml.py  test_research.py  test_tuning_stress.py  test_validation.py
