[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "computational-finance-pipeline"
version = "0.1.0"
description = "A-share data acquisition, factor research, and vectorized backtesting pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "akshare>=1.17",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "requests>=2.31",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
cfp = "cfpipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
