[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "computational-finance-pipeline"
version = "0.1.0"
description = "A-share data acquisition, factor research, and vectorized backtesting pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "akshare>=1.17",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "requests>=2.31",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pandas-stubs>=2.2",
  "pre-commit>=3.7",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.8",
  "types-PyYAML>=6.0",
  "types-requests>=2.31",
]

[project.scripts]
cfp = "cfpipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["legacy", "data", "outputs"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["cfpipeline"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
files = [
  "src/cfpipeline/artifacts.py",
  "src/cfpipeline/benchmarks.py",
  "src/cfpipeline/cli.py",
  "src/cfpipeline/config.py",
  "src/cfpipeline/paths.py",
  "src/cfpipeline/research.py",
  "src/cfpipeline/validation.py",
]

[tool.coverage.run]
branch = true
source = ["cfpipeline"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
